# RustWebserversBenchmark

./: .gitignore  AWS Setup.txt  AWS.sh  README.md  REPORTS.md  aggregate_results.py  build_plots.py  results.csv  set_workload_size.py
Results/actix-web-bench/Compression/Dynamic/1/: 1.txt  2.txt  3.txt
Results/actix-web-bench/Compression/Dynamic/100/: 1.txt  2.txt  3.txt
Results/actix-web-bench/Compression/Dynamic/150/: 1.txt  2.txt  3.txt
Results/actix-web-bench/Compression/Dynamic/200/: 1.txt  2.txt  3.txt
Results/actix-web-bench/Compression/Dynamic/25/: 1.txt  2.txt  3.txt
Results/actix-web-bench/Compression/Dynamic/50/: 1.txt  2.txt  3.txt
Results/actix-web-bench/Compression/Dynamic/75/: 1.txt  2.txt  3.txt
Results/actix-web-bench/Compression/Large/1/: 1.txt  2.txt  3.txt
Results/actix-web-bench/Compression/Large/100/: 1.txt  2.txt  3.txt
Results/actix-web-bench/Compression/Large/150/: 1.txt  2.txt  3.txt
Results/actix-web-bench/Compression/Large/200/: 1.txt  2.txt  3.txt
Results/actix-web-bench/Compression/Large/25/: 1.txt  2.txt  3.txt
Results/actix-web-bench/Compression/Large/50/: 1.txt  2.txt  3.txt
Results/actix-web-bench/Compression/Large/75/: 1.txt  2.txt  3.txt
Results/actix-web-bench/Compression/Medium/1/: 1.txt  2.txt  3.txt
Results/actix-web-bench/Compression/Medium/100/: 1.txt  2.txt  3.txt
actix-web-bench/: Cargo.toml  README.md
actix-web-bench/src/: main.rs
axum-bench/: .gitignore  Cargo.toml  README.md
axum-bench/src/: main.rs
rocket-bench/: Cargo.toml  README.md
rocket-bench/src/: main.rs
static/: tiny.html
(+897 files in other folders)
