[package]
name = "axum-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.24.1", features = ["full"] }
tower = "0.4.1"
tower-http = { version = "0.3.5", features = ["fs"]}
serde = { version = "1.0.152", features = ["derive"]}

[features]
compression = ["tower-http/compression-gzip"]
single_threaded = []